--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,37 @@
-
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-
-# debug information files
-*.dwo
+# Node dependencies
 node_modules/
-aurora-energy-flow/
+
+# Build output
 dist/
+build/
+
+# Environment variables
 .env
+.env.*.local
+
+# Logs & debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Vite / CRA cache
+.vite/
+.cache/
+
+# Supabase CLI metadata
+.supabase/
+supabase/.temp/
+supabase/.output/
+
+
+
+# Ignore separate nested repos
+aurora-energy-flow/
+
+# VS Code settings
+.vscode/
